feat: fixing context

--- a/index.html
+++ b/index.html
@@ -113,24 +113,24 @@
         </div>
 
         <!-- Comparison -->
-        <h2>Comparison with closed-source methods</h2>
+        <h2>Comparison with other methods</h2>
         <p>We compared the performance of our TalkingBody model with OmniHuman-1 and Hallo3, the current SOTA method for multimodality-conditioned human video generation. In the video below, from left to right are OmniHuman-1, Hallo3 and ours (TalkingBody)</p>
         <div class="gallery">
-            <video controls><source src="D:\code\woolseyyy.github.io\gpt4o\talkingbody\compare_case\omnihuman\001.mp4" type="video/mp4"></video>
-            <video controls><source src="D:\code\woolseyyy.github.io\gpt4o\talkingbody\compare_case\hallo3\001.mp4" type="video/mp4"></video>
-            <video controls><source src="D:\code\woolseyyy.github.io\gpt4o\talkingbody\compare_case\vigen\001.mp4" type="video/mp4"></video>
+            <video controls><source src="talkingbody\compare_case\omnihuman\001.mp4" type="video/mp4"></video>
+            <video controls><source src="talkingbody\compare_case\hallo3\001.mp4" type="video/mp4"></video>
+            <video controls><source src="talkingbody\compare_case\vigen\001.mp4" type="video/mp4"></video>
 
-            <video controls><source src="D:\code\woolseyyy.github.io\gpt4o\talkingbody\compare_case\omnihuman\002.mp4" type="video/mp4"></video>
-            <video controls><source src="D:\code\woolseyyy.github.io\gpt4o\talkingbody\compare_case\hallo3\008.mp4" type="video/mp4"></video>
-            <video controls><source src="D:\code\woolseyyy.github.io\gpt4o\talkingbody\compare_case\vigen\005.mp4" type="video/mp4"></video>
+            <video controls><source src="talkingbody\compare_case\omnihuman\002.mp4" type="video/mp4"></video>
+            <video controls><source src="talkingbody\compare_case\hallo3\008.mp4" type="video/mp4"></video>
+            <video controls><source src="talkingbody\compare_case\vigen\005.mp4" type="video/mp4"></video>
 
-            <video controls><source src="D:\code\woolseyyy.github.io\gpt4o\talkingbody\compare_case\omnihuman\004.mp4" type="video/mp4"></video>
-            <video controls><source src="D:\code\woolseyyy.github.io\gpt4o\talkingbody\compare_case\hallo3\007.mp4" type="video/mp4"></video>
-            <video controls><source src="D:\code\woolseyyy.github.io\gpt4o\talkingbody\compare_case\vigen\004.mp4" type="video/mp4"></video>
+            <video controls><source src="talkingbody\compare_case\omnihuman\004.mp4" type="video/mp4"></video>
+            <video controls><source src="talkingbody\compare_case\hallo3\007.mp4" type="video/mp4"></video>
+            <video controls><source src="talkingbody\compare_case\vigen\004.mp4" type="video/mp4"></video>
 
-            <video controls><source src="D:\code\woolseyyy.github.io\gpt4o\talkingbody\compare_case\omnihuman\003.mp4" type="video/mp4"></video>
-            <video controls><source src="D:\code\woolseyyy.github.io\gpt4o\talkingbody\compare_case\hallo3\002.mp4" type="video/mp4"></video>
-            <video controls><source src="D:\code\woolseyyy.github.io\gpt4o\talkingbody\compare_case\vigen\002.mp4" type="video/mp4"></video>
+            <video controls><source src="talkingbody\compare_case\omnihuman\003.mp4" type="video/mp4"></video>
+            <video controls><source src="talkingbody\compare_case\hallo3\002.mp4" type="video/mp4"></video>
+            <video controls><source src="talkingbody\compare_case\vigen\002.mp4" type="video/mp4"></video>
         </div>
 
     </div>
